tooling/nargo_cli/tests/snapshots/execution_failure/regression_9489/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
bug: Assertion is always false: Cannot pop from an empty vector
  ┌─ src/main.nr:3:13
  │
3 │     let _ = G_A.pop_front().0;
  │             ------------- As a result, the compiled circuit is ensured to fail. Other assertions may also fail during execution
  │
  = Call stack:
    1: main
            at src/main.nr:3:13

error: Assertion failed: Cannot pop from an empty vector
  ┌─ src/main.nr:3:13
  │
3 │     let _ = G_A.pop_front().0;
  │             -------------
  │
  = Call stack:
    1: main
            at src/main.nr:3:13

Failed assertion
