tooling/nargo_cli/tests/snapshots/execution_failure/regression_9489/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Attempt to pop from an empty vector
  ┌─ src/main.nr:3:13
  │
3 │     let _ = G_A.pop_front().0;
  │             -------------
  │
  = Call stack:
    1: main
            at src/main.nr:3:13

Failed assertion
