tooling/nargo_cli/tests/snapshots/execution_failure/regression_9489/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Attempt to pop from an empty vector
  ┌─ src/main.nr:3:13
  │
3 │     let _ = G_A.pop_front().0;
  │             --------------- Assertion failed
  │
  = Call stack:
    1: ?
            at src/main.nr:2:4
    2: main
            at src/main.nr:3:13

Error interpreting main function
